--- a/src/stylus/calories/info-toggle.styl
+++ b/src/stylus/calories/info-toggle.styl
@@ -1,17 +1,25 @@
 .info-toggle
-  margin 0 0 0 auto
+  margin 0 -.75rem 0 auto
   position relative
   z-index 1
 
 .info-toggle__button
   align-items center
-  color var(--link)
+  color var(--app-link)
   cursor pointer
   display flex
   height var(--header-height)
   justify-content center
   transition color var(--transition), transform var(--transition)
   width var(--button-width)
+
+.info-toggle__button:focus
+.info-toggle__button:active
+[no-touch] .info-toggle__button:hover
+  color var(--app-link-active)
+
+.info-toggle__button:active
+  transform scale(.8)
 
 .info-toggle__icon
   flex 0 0 1.25rem
