--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -6,6 +6,12 @@ Branding = {
   ORANGE: #ff7a00
 }
 
+// @type Hash
+LinkColor = {
+  LIGHT: #0070c9
+  DARK: #008eff
+}
+
 // @const String
 BUTTON_HEIGHT = px_to_rem(44)
 
